force-app/main/default/objects/Contact/fields/Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Email_CC__c</fullName>
    <label>Email CC:</label>
    <type>Email</type>
</CustomField>