force-app/main/default/objects/Contact/fields/Exact_Online_Id__c.field-meta.xml
<CustomField>
    <fullName>Exact_Online_Id__c</fullName>
    <externalId>true</externalId>
    <label>Exact Online Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>