force-app/main/default/objects/Contact/fields/Notes_Internal__c.field-meta.xml
<CustomField>
    <fullName>Notes_Internal__c</fullName>
    <label>Notes Internal</label>
    <type>TextArea</type>
</CustomField>